<resources>
    <string name="app_name">Final year</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="search_title">search ka title</string>
    <string name="title_activity_registration">Registration</string>
    <string name="registration_name">Full name</string>
    <string name="registration_phone">Phone no.</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_address">Address</string>
    <string name="registration_submit_button">Submit</string>
    <string name="call_button">this is contact contentDescription</string>
    <string name="msg_sit_back">Sit back and Relax! while we verify your mobile</string>
    <string name="msg_manual_otp">(Enter the OTP in case in case if we fail to detect the SMS automatically)</string>
    <string name="API_KEY">141476AGeh58xdM58a4ab99</string>
</resources>
