<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar">
    </include>

    <RelativeLayout
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floating_registration_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_name"
                android:id="@+id/registration_name"
                android:layout_marginLeft="@dimen/registration_margin"
                android:layout_marginRight="@dimen/registration_margin"
                android:layout_marginTop="13dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floating_registration_phone"
            android:layout_below="@+id/floating_registration_name"
            android:layout_alignParentStart="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile No."
                android:inputType="phone"
                android:id="@+id/registration_phone"
                android:layout_marginLeft="@dimen/registration_margin"
                android:layout_marginRight="@dimen/registration_margin"
                android:layout_alignBottom="@+id/floating_registration_address"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floating_registration_password"
            android:layout_below="@+id/floating_registration_phone"
            android:layout_alignParentStart="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_password"
                android:inputType="textPassword"
                android:id="@+id/registration_password"
                android:layout_marginLeft="@dimen/registration_margin"
                android:layout_marginRight="@dimen/registration_margin"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/floating_registration_phone"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floating_registration_confirm_password"
            android:layout_below="@+id/floating_registration_password"
            android:layout_alignParentEnd="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_confirm_password"
                android:inputType="textPassword"
                android:id="@+id/registration_confirm_password"
                android:layout_marginLeft="@dimen/registration_margin"
                android:layout_marginRight="@dimen/registration_margin"
                android:layout_marginTop="14dp"
                android:layout_below="@id/floating_registration_password"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floating_registration_address"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/floating_registration_confirm_password"
            android:layout_alignParentStart="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_address"
                android:id="@+id/registration_address"
                android:layout_marginLeft="@dimen/registration_margin"
                android:layout_marginRight="@dimen/registration_margin"
                android:layout_weight="1"
                android:layout_above="@+id/registration_radio_group"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floating_registration_pin_no"
            android:layout_below="@+id/floating_registration_address"
            android:layout_alignParentStart="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pin no"
                android:id="@+id/registration_pin_no"
                android:layout_marginLeft="@dimen/registration_margin"
                android:layout_marginRight="@dimen/registration_margin"
                android:layout_above="@+id/registration_radio_group"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registration_radio_group"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/registration_margin"
            android:layout_marginRight="@dimen/registration_margin"
            android:layout_below="@+id/floating_registration_pin_no"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Consumer"
                android:checked="true"
                android:id="@+id/registration_consumer"
                android:layout_margin="@dimen/registration_margin"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Provider"
                android:id="@+id/registration_provider"
                android:layout_margin="@dimen/registration_margin"
                />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/registration_submit_button"
            android:id="@+id/registration_submit"
            android:layout_marginLeft="@dimen/registration_margin"
            android:layout_marginRight="@dimen/registration_margin"
            android:layout_below="@+id/registration_radio_group"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>